exports[`Uptime Snapshot Test > react > test case common to both #0`] = `
<div class="ui-uptime-widget" data-id="uptime">
  <div class="ui-uptime-graph">
    <ul class="ui-uptime-list">
      <li class="ui-uptime-day ui-uptime-trouble ui-uptime-align-left">
        <span
          class="ui-uptime-width-extra-wide"
          style="transform: translateX(0%);"
          >09pm for 13 mins - Network connectivity issues in the Asia-Pacific
          region</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span class="ui-uptime-width-normal" style="transform: translateX(0%);"
          >12 May UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-10%);"
          >11 May UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-20%);"
          >10 May UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-30%);"
          >09 May UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-40%);"
          >08 May UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-50%);"
          >07 May UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-trouble ui-uptime-align-left">
        <span
          class="ui-uptime-width-extra-wide"
          style="transform: translateX(-50%);"
          >09pm for 13 mins - Network connectivity issues in the Asia-Pacific
          region</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">05 May UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">04 May UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">03 May UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">02 May UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">01 May UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">30 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">29 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">28 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">27 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">26 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">25 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">24 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">23 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">22 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(50%);"
          >21 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(50%);"
          >20 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(40%);"
          >19 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(30%);"
          >18 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(20%);"
          >17 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(10%);"
          >16 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(0%);"
          >15 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-seperator"></li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span class="ui-uptime-width-normal" style="transform: translateX(0%);"
          >14 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-10%);"
          >13 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-20%);"
          >12 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-30%);"
          >11 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-40%);"
          >10 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-50%);"
          >09 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-50%);"
          >08 Apr UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">07 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">06 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">05 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">04 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">03 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">02 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">01 Apr UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">31 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">30 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">29 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">28 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">27 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">26 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">25 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">24 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">23 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(50%);"
          >22 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(50%);"
          >21 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(40%);"
          >20 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(30%);"
          >19 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(20%);"
          >18 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(10%);"
          >17 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-trouble ui-uptime-align-right">
        <span
          class="ui-uptime-width-extra-wide"
          style="transform: translateX(0%);"
          >Extreme - Ad ipisicing officia be atae rerum soluta cupid it ate
          Libero nulla n…</span
        >
      </li>
      <li class="ui-uptime-seperator"></li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span class="ui-uptime-width-normal" style="transform: translateX(0%);"
          >15 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-10%);"
          >14 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-20%);"
          >13 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-30%);"
          >12 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-40%);"
          >11 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-50%);"
          >10 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-left">
        <span
          class="ui-uptime-width-normal"
          style="transform: translateX(-50%);"
          >09 Mar UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">08 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">07 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">06 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">05 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">04 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">03 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">02 Mar UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-down ui-uptime-align-null">
        <span class="ui-uptime-width-extra-wide"
          >09pm for 13 mins - Network connectivity issues in the Asia-Pacific
          region</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">28 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">27 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">26 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">25 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">24 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">23 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">22 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-null">
        <span class="ui-uptime-width-normal">21 Feb UTC</span>
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(50%);"
          >20 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(50%);"
          >19 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(40%);"
          >18 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(30%);"
          >17 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(20%);"
          >16 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(10%);"
          >15 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(0%);"
          >14 Feb UTC</span
        >
      </li>
      <li class="ui-uptime-day ui-uptime-up ui-uptime-align-right">
        <span class="ui-uptime-width-normal" style="transform: translateX(0%);"
          >13 Feb UTC</span
        >
      </li>
    </ul>
  </div>
  <div class="ui-uptime-footer">
    <div class="ui-uptime-legend">
      <span class="ui-uptime-key ui-uptime-up text-white">All good</span
      ><span class="ui-uptime-key ui-uptime-trouble text-white"
        >Performance issue</span
      ><span class="ui-uptime-key ui-uptime-down text-white"
        >Service disruption</span
      >
    </div>
    <div class="ui-uptime-link-back">
      <a
        href="//status.ably.com"
        class="ui-featured-link text-menu3 py-8 "
        style="--featured-link-icon-size:var(--fs-menu3);"
        >More on our status site<svg
          class="text-white ui-featured-link-icon"
          style="width: calc(var(--featured-link-icon-size) * 1.25); height: calc(var(--featured-link-icon-size) * 1.25);"
        >
          <use xlink:href="#sprite-icon-gui-link-arrow"></use></svg
      ></a>
    </div>
  </div>
</div>
`;

exports[`Uptime Snapshot Test > react > test case common to both #1`] = `
<div
  class="flex sm:flex-row justify-center items-center p-24 border rounded font-sans font-light text-p2 text-cool-black"
  data-id="uptime-error"
>
  Sorry, we can’t retrieve uptime data right now.
</div>
`;

exports[`Code Snapshot Test > react > test case common to both #0`] = `
<div class="hljs overflow-auto p-32 " data-id="code">
  <pre
    lang="javascript"
  ><code class="language-javascript ui-text-code"><span class="hljs-keyword">var</span> ably = <span class="hljs-keyword">new</span> Ably.Realtime(<span class="hljs-string">'1WChTA.mc0Biw:kNfiYG4KiPgmHHgH'</span>);
<span class="hljs-keyword">var</span> channel = ably.channels.get(<span class="hljs-string">'web-pal'</span>);

<span class="hljs-comment">// Subscribe to messages on channel</span>
channel.subscribe(<span class="hljs-string">'greeting'</span>, <span class="hljs-function"><span class="hljs-keyword">function</span>(<span class="hljs-params">message</span>) </span>{
  alert(message.data);
});</code></pre>
</div>
`;

exports[`Code Snapshot Test > react > test case common to both #1`] = `
<div class="hljs overflow-auto p-32 " data-id="code">
  <pre
    lang="swift"
  ><code class="language-swift ui-text-code"><span class="hljs-keyword">let</span> ably <span class="hljs-operator">=</span> <span class="hljs-type">ARTRealtime</span>(key: <span class="hljs-string">"1WChTA.mc0Biw:kNfiYG4KiPgmHHgH"</span>)
<span class="hljs-keyword">let</span> channel <span class="hljs-operator">=</span> ably.channels.get(<span class="hljs-string">"web-pal"</span>)

<span class="hljs-comment">// Subscribe to messages on channel</span>
channel.subscribe(<span class="hljs-string">"greeting"</span>) { message <span class="hljs-keyword">in</span>
  <span class="hljs-built_in">print</span>(<span class="hljs-string">"<span class="hljs-subst">\\(message.data)</span>"</span>)
}</code></pre>
</div>
`;

exports[`Code Snapshot Test > react > test case common to both #2`] = `
<div class="hljs overflow-auto p-32 " data-id="code">
  <pre
    lang="java"
  ><code class="language-java ui-text-code">AblyRealtime ably = <span class="hljs-keyword">new</span> AblyRealtime(<span class="hljs-string">"1WChTA.mc0Biw:kNfiYG4KiPgmHHgH"</span>);
Channel channel = ably.channels.get(<span class="hljs-string">"web-pal"</span>);

<span class="hljs-comment">/* Subscribe to messages on channel */</span>

MessageListener listener;
listener = <span class="hljs-keyword">new</span> MessageListener() {
  <span class="hljs-meta">@Override</span>
  <span class="hljs-function"><span class="hljs-keyword">public</span> <span class="hljs-keyword">void</span> <span class="hljs-title">onMessage</span><span class="hljs-params">(Message message)</span> </span>{
    System.out.print(message.data);
  };
};
channel.subscribe(<span class="hljs-string">"greeting"</span>, listener);</code></pre>
</div>
`;

exports[`Code Snapshot Test > view component > test case common to both #0`] = `
<div class="hljs overflow-auto p-32 " data-id="code">
  <pre
    lang="javascript"
  ><code class="language-javascript ui-text-code"><span class="hljs-keyword">var</span> ably = <span class="hljs-keyword">new</span> Ably.Realtime(<span class="hljs-string">'1WChTA.mc0Biw:kNfiYG4KiPgmHHgH'</span>);
<span class="hljs-keyword">var</span> channel = ably.channels.get(<span class="hljs-string">'web-pal'</span>);

<span class="hljs-comment">// Subscribe to messages on channel</span>
channel.subscribe(<span class="hljs-string">'greeting'</span>, <span class="hljs-function"><span class="hljs-keyword">function</span>(<span class="hljs-params">message</span>) </span>{
  alert(message.data);
});</code></pre>
</div>
`;

exports[`Code Snapshot Test > view component > test case common to both #1`] = `
<div class="hljs overflow-auto p-32 " data-id="code">
  <pre
    lang="swift"
  ><code class="language-swift ui-text-code"><span class="hljs-keyword">let</span> ably <span class="hljs-operator">=</span> <span class="hljs-type">ARTRealtime</span>(key: <span class="hljs-string">"1WChTA.mc0Biw:kNfiYG4KiPgmHHgH"</span>)
<span class="hljs-keyword">let</span> channel <span class="hljs-operator">=</span> ably.channels.get(<span class="hljs-string">"web-pal"</span>)

<span class="hljs-comment">// Subscribe to messages on channel</span>
channel.subscribe(<span class="hljs-string">"greeting"</span>) { message <span class="hljs-keyword">in</span>
  <span class="hljs-built_in">print</span>(<span class="hljs-string">"<span class="hljs-subst">\\(message.data)</span>"</span>)
}</code></pre>
</div>
`;

exports[`Code Snapshot Test > view component > test case common to both #2`] = `
<div class="hljs overflow-auto p-32 " data-id="code">
  <pre
    lang="java"
  ><code class="language-java ui-text-code">AblyRealtime ably = <span class="hljs-keyword">new</span> AblyRealtime(<span class="hljs-string">"1WChTA.mc0Biw:kNfiYG4KiPgmHHgH"</span>);
Channel channel = ably.channels.get(<span class="hljs-string">"web-pal"</span>);

<span class="hljs-comment">/* Subscribe to messages on channel */</span>

MessageListener listener;
listener = <span class="hljs-keyword">new</span> MessageListener() {
  <span class="hljs-meta">@Override</span>
  <span class="hljs-function"><span class="hljs-keyword">public</span> <span class="hljs-keyword">void</span> <span class="hljs-title">onMessage</span><span class="hljs-params">(Message message)</span> </span>{
    System.out.print(message.data);
  };
};
channel.subscribe(<span class="hljs-string">"greeting"</span>, listener);</code></pre>
</div>
`;

exports[`Chat button state > react > the button is inactive without Hubspot widget #0`] = `
<button
  type="button"
  class="ui-btn-secondary self-start mt-16"
  disabled=""
  data-id="open-chat-widget"
  data-enabled-label="Start a live chat"
  data-disabled-label="Live chat unavailable"
>
  Live chat unavailable
</button>
`;

exports[`Chat button state > vw > the button is inactive without Hubspot widget #0`] = `
<button
  type="button"
  class="ui-btn-secondary self-start mt-16"
  disabled=""
  data-id="open-chat-widget"
  data-enabled-label="Start a live chat"
  data-disabled-label="Live chat unavailable"
>
  Live chat unavailable
</button>
`;

exports[`Cookie Message Snapshot Test > react > the message component is visible #0`] = `
<div class="ui-cookie-message">
  <p class="ui-text-p2 pr-32">
    <a href="/privacy" class="underline">How we use cookies</a> to improve your
    experience.
  </p>
  <button class="ui-btn-secondary mt-12 sm:mt-0 whitespace-nowrap">
    Accept and close
  </button>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #0`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-zingy-green p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-cool-black mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-tick"></use>
    </svg>
    <p class="ui-flash-text text-cool-black">
      Congratulations! You've won the Oscar
    </p>
    <button type="button" class="p-0 ml-auto self-start">
      <svg class="h-24 w-24 transition-colors ui-icon-cool-black">
        <use xlink:href="#sprite-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #1`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-electric-cyan p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-cool-black mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-ably-badge"></use>
    </svg>
    <p class="ui-flash-text text-cool-black">This is a notice</p>
    <button type="button" class="p-0 ml-auto self-start">
      <svg class="h-24 w-24 transition-colors ui-icon-cool-black">
        <use xlink:href="#sprite-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #2`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-gui-error p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-white mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-warning"></use>
    </svg>
    <p class="ui-flash-text text-white">This is an error, very bad</p>
    <button type="button" class="p-0 ml-auto self-start">
      <svg class="h-24 w-24 transition-colors ui-icon-cool-black">
        <use xlink:href="#sprite-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #3`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-active-orange p-32 flex align-center rounded shadow-container-subtle"
  >
    <svg
      class="text-white mr-16 self-baseline"
      style="width: 1.5rem; height: 1.5rem;"
    >
      <use xlink:href="#sprite-icon-gui-warning"></use>
    </svg>
    <p class="ui-flash-text text-white">This is an alert</p>
    <button type="button" class="p-0 ml-auto self-start">
      <svg class="h-24 w-24 transition-colors ui-icon-cool-black">
        <use xlink:href="#sprite-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flash Snapshot Test > renders correcty #4`] = `
<div
  class="ui-flash-message ui-grid-px ui-flash-message-enter"
  data-id="ui-flash"
>
  <div
    class="bg-electric-cyan p-32 flex align-center rounded shadow-container-subtle"
  >
    <p class="ui-flash-text text-cool-black">
      Some useful information, you are welcome
    </p>
    <button type="button" class="p-0 ml-auto self-start">
      <svg class="h-24 w-24 transition-colors ui-icon-cool-black">
        <use xlink:href="#sprite-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Footer Snapshot Test > react > test case common to both #0`] = `
<footer class="bg-light-grey font-sans antialiased" data-id="footer">
  <div
    class="max-w-screen-xl mx-auto py-32 sm:py-40 lg:py-64 ui-grid-gap ui-grid-px grid grid-cols-6"
  >
    <div class="col-span-full md:col-span-2">
      <div class="flex flex-row p-menu-row-snug">
        <img
          class="mr-24 -mt-16"
          src="/assets/ably_ui/core/images/ably-stack-f942defb86ef288e999c451c1f7e34fbbe59b7200d738c080e15a9f8716bbdad.svg"
          alt="Ably homepage"
        />
        <h2
          class="text-overline2 col-span-full font-medium uppercase tracking-widen-0.1"
        >
          The Ably Platform
        </h2>
      </div>
      <div class="grid grid-cols-4">
        <p class="text-p3 py-16 font-medium p-menu-row-snug col-span-3">
          Easily power any realtime experience in your application via a simple
          API that handles everything realtime.
        </p>
      </div>
      <ul
        class="grid gap-x-8 sm:gap-x-16 md:gap-x-24 xl:gap-x-32 sm:grid-cols-2 md:grid-cols-1"
      >
        <li class="p-menu-row-snug">
          <a href="/pub-sub-messaging" class="ui-footer-menu-row-link"
            >Pub/sub messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/push-notifications" class="ui-footer-menu-row-link"
            >Push notifications</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/integrations" class="ui-footer-menu-row-link"
            >Third-party integrations</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/protocols" class="ui-footer-menu-row-link"
            >Multiple protocol messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/hub" class="ui-footer-menu-row-link"
            >Streaming data sources</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">Ably is for</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/solutions/asset-tracking" class="ui-footer-menu-row-link"
            >Ably Asset Tracking</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/extend-kafka-to-the-edge"
            class="ui-footer-menu-row-link"
            >Extend Kafka to the edge</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/edtech" class="ui-footer-menu-row-link">EdTech</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/automotive-logistics-and-mobility"
            class="ui-footer-menu-row-link"
            >Automotive, Logistics, &amp; Mobility</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/b2b-platforms" class="ui-footer-menu-row-link"
            >B2B Platforms</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/healthcare" class="ui-footer-menu-row-link"
            >Healthcare</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/hub" class="ui-footer-menu-row-link"
            >Streaming data sources</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/ecommerce-and-retail"
            class="ui-footer-menu-row-link"
            >eCommerce &amp; Retail</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/sports-and-media" class="ui-footer-menu-row-link"
            >Sports &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/solutions/gaming" class="ui-footer-menu-row-link">Gaming</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/solutions/iot-and-connected-devices"
            class="ui-footer-menu-row-link"
            >IoT &amp; Connected Devices</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">Developers</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/docs/quick-start-guide" class="ui-footer-menu-row-link"
            >Start in 5 minutes</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/docs/" class="ui-footer-menu-row-link">Documentation</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/tutorials" class="ui-footer-menu-row-link">Tutorials</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="https://changelog.ably.com/" class="ui-footer-menu-row-link"
            >Changelog</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/support" class="ui-footer-menu-row-link"
            >Support &amp; FAQs</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/download" class="ui-footer-menu-row-link">SDKs</a>
        </li>
        <li class="p-menu-row-snug flex items-center">
          <a
            class="pr-8 ui-footer-menu-row-link"
            href="https://status.ably.com/"
            >System status</a
          ><iframe
            class="w-24 h-24 mt-4"
            src="https://status.ably.com/embed/icon"
            allowtransparency="true"
            frameborder="0"
            scrolling="no"
          ></iframe>
        </li>
      </ul>
    </div>
    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">WHY ABLY</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/customers" class="ui-footer-menu-row-link">Customers</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/case-studies" class="ui-footer-menu-row-link"
            >Case Studies</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="/four-pillars-of-dependability"
            class="ui-footer-menu-row-link"
            >Four Pillars of Dependability</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/compare" class="ui-footer-menu-row-link"
            >Compare our tech</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/protocols" class="ui-footer-menu-row-link"
            >Multi protocol support</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/integrations" class="ui-footer-menu-row-link"
            >Third-party integrations</a
          >
        </li>
      </ul>
    </div>
    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">ABOUT</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a href="/about" class="ui-footer-menu-row-link">About Ably</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/pricing" class="ui-footer-menu-row-link">Pricing</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/blog" class="ui-footer-menu-row-link">Blog</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/careers" class="ui-footer-menu-row-link">Careers</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="/open-policy" class="ui-footer-menu-row-link"
            >Open protocol policy</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="https://www.notion.so/ably/Ably-Press-Center-551152f5be724d4495a7c2e29d9f51c7"
            rel="noopener noreferrer"
            target="_blank"
            class="ui-footer-menu-row-link"
            >Press &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a href="/contact" class="ui-footer-menu-row-link">Contact us</a>
        </li>
      </ul>
    </div>
  </div>
  <div class="max-w-screen-xl ui-grid-px mx-auto">
    <hr class="border-t border-mid-grey" />
  </div>
  <div
    class="max-w-screen-xl mx-auto py-24 md:py-40 lg:py-32 grid ui-grid-gap ui-grid-px grid-cols-2"
  >
    <div class="flex flex-col flex-auto pb-40 ml-8 col-span-full md:col-span-1">
      <div class="inline-flex">
        <a href="/privacy" class="pr-24 ui-footer-link">Cookies</a
        ><a href="/legals" class="pr-24 ui-footer-link">Legals</a
        ><a href="/data-protection" class="pr-24 ui-footer-link"
          >Data Protection</a
        ><a href="/privacy" class="ui-footer-link">Privacy</a>
      </div>
      <div class="pt-32 flex items-center">
        <a
          class="h-24 pr-24 text-cool-black hover:text-icon-twitter"
          href="https://twitter.com/ablyrealtime"
          ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
            <use xlink:href="#sprite-twitter"></use></svg></a
        ><a
          class="h-24 pr-24 text-cool-black hover:text-icon-linkedin"
          href="https://www.linkedin.com/company/ably-realtime"
          ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
            <use xlink:href="#sprite-linkedin"></use></svg></a
        ><a
          class="h-24 pr-24 text-cool-black hover:text-icon-github"
          href="https://github.com/ably/"
          ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
            <use xlink:href="#sprite-github"></use></svg></a
        ><a
          class="h-24 pr-24 text-cool-black hover:text-icon-discord"
          href="https://discord.gg/jwBPhEZ9g5"
          ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
            <use xlink:href="#sprite-discord"></use></svg
        ></a>
        <div class="border-l border-mid-grey h-40"></div>
        <a
          class="flex flex-row pl-24 text-cool-black hover:text-icon-glassdoor"
          href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
          ><svg class=" " style="width: 1.5rem; height: 1.5rem;">
            <use xlink:href="#sprite-glassdoor"></use></svg
        ></a>
        <div class="pl-16 text-menu3 font-light">
          <strong class="block font-medium">We're hiring!</strong
          ><a
            href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
            class="ui-footer-link"
            >Learn more</a
          >&nbsp;at Glassdoor
        </div>
      </div>
    </div>
    <div
      class="md:text-right col-span-full md:col-span-1 ml-8 inline-flex md:ml-auto"
    >
      <img
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/rocket-list-2021-585749315fb7d34591caa21db10b0a2abc6bb38bbe32f9f350b5ae48a05c26dd.png"
        alt="Rocket List 2021"
      /><img
        class="w-96 h-96"
        src="/assets/ably_ui/core/images/flexible-companies-dc4c35aaec0e576c23df2d8c684bf64739a0df9ed6410f84ea7ba61245ca4efc.png"
        alt="Flexible Companies 2021"
      />
    </div>
  </div>
</footer>
`;

exports[`Footer Snapshot Test > view component > test case common to both #0`] = `
<footer class="bg-light-grey font-sans antialiased" data-id="footer">
  <div
    class="max-w-screen-xl mx-auto py-32 sm:py-40 lg:py-64 ui-grid-gap ui-grid-px grid grid-cols-6"
  >
    <div class="col-span-full md:col-span-2">
      <div class="flex flex-row p-menu-row-snug">
        <img
          alt="Ably homepage"
          class="mr-24 -mt-16"
          src="/assets/ably_ui/core/images/ably-stack-f942defb86ef288e999c451c1f7e34fbbe59b7200d738c080e15a9f8716bbdad.svg"
        />
        <h2
          class="text-overline2 col-span-full font-medium uppercase tracking-widen-0.1"
        >
          The Ably Platform
        </h2>
      </div>

      <div class="grid grid-cols-4">
        <p class="text-p3 py-16 font-medium p-menu-row-snug col-span-3">
          Easily power any realtime experience in your application via a simple
          API that handles everything realtime.
        </p>
      </div>

      <ul
        class="grid gap-x-8 sm:gap-x-16 md:gap-x-24 xl:gap-x-32 sm:grid-cols-2 md:grid-cols-1"
      >
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/pub-sub-messaging"
            >Pub/sub messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/push-notifications"
            >Push notifications</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/integrations"
            >Third-party integrations</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/protocols"
            >Multiple protocol messaging</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/hub"
            >Streaming data sources</a
          >
        </li>
      </ul>
    </div>

    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">Ably is for</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/asset-tracking"
            >Ably Asset Tracking</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/extend-kafka-to-the-edge"
            >Extend Kafka to the edge</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/edtech">EdTech</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/automotive-logistics-and-mobility"
            >Automotive, Logistics, &amp; Mobility</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/b2b-platforms"
            >B2B Platforms</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/healthcare"
            >Healthcare</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/hub"
            >Streaming data sources</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/ecommerce-and-retail"
            >eCommerce &amp; Retail</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/sports-and-media"
            >Sports &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/solutions/gaming">Gaming</a>
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/solutions/iot-and-connected-devices"
            >IoT &amp; Connected Devices</a
          >
        </li>
      </ul>
    </div>

    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">Developers</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/docs/quick-start-guide"
            >Start in 5 minutes</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/docs">Documentation</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/tutorials">Tutorials</a>
        </li>
        <li class="p-menu-row-snug">
          <a href="https://changelog.ably.com/" class="ui-footer-menu-row-link"
            >Changelog</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/support"
            >Support &amp; FAQs</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/download">SDKs</a>
        </li>
        <li class="p-menu-row-snug flex items-center">
          <a
            class="pr-8 ui-footer-menu-row-link"
            href="https://status.ably.com/"
            >System status</a
          >
          <iframe
            class="w-24 h-24 mt-4"
            src="https://status.ably.com/embed/icon"
            allowtransparency="true"
            frameborder="0"
            scrolling="no"
          ></iframe>
        </li>
      </ul>
    </div>

    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">WHY ABLY</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/customers">Customers</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/case-studies"
            >Case Studies</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            class="ui-footer-menu-row-link"
            href="/four-pillars-of-dependability"
            >Four Pillars of Dependability</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/compare"
            >Compare our tech</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/protocols"
            >Multi protocol support</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/integrations"
            >Third-party integrations</a
          >
        </li>
      </ul>
    </div>

    <div class="col-span-full sm:col-span-3 md:col-span-1">
      <h2 class="ui-footer-col-title">ABOUT</h2>
      <ul>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/about">About Ably</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/pricing">Pricing</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/blog">Blog</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/careers">Careers</a>
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/open-policy"
            >Open protocol policy</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a
            href="https://www.notion.so/ably/Ably-Press-Center-551152f5be724d4495a7c2e29d9f51c7"
            target="_blank"
            rel="noopener"
            class="ui-footer-menu-row-link"
            >Press &amp; Media</a
          >
        </li>
        <li class="p-menu-row-snug">
          <a class="ui-footer-menu-row-link" href="/contact">Contact us</a>
        </li>
      </ul>
    </div>
  </div>

  <div class="max-w-screen-xl ui-grid-px mx-auto">
    <hr class="border-t border-mid-grey" />
  </div>

  <div
    class="max-w-screen-xl mx-auto py-24 md:py-40 lg:py-32 grid ui-grid-gap ui-grid-px grid-cols-2"
  >
    <div class="flex flex-col flex-auto pb-40 ml-8 col-span-full md:col-span-1">
      <div class="inline-flex">
        <a class="ui-footer-link pr-24" href="/privacy">Cookies</a>
        <a class="ui-footer-link pr-24" href="/legals">Legals</a>
        <a class="ui-footer-link pr-24" href="/data-protection"
          >Data Protection</a
        >
        <a class="ui-footer-link" href="/privacy">Privacy</a>
      </div>

      <div class="pt-32 flex items-center">
        <a
          class="h-24 pr-24 text-cool-black hover:text-icon-twitter"
          href="https://twitter.com/ablyrealtime"
        >
          <svg class=" " style="width: 1.5rem; height: 1.5rem">
            <use xlink:href="#sprite-twitter"></use>
          </svg>
        </a>
        <a
          class="h-24 pr-24 text-cool-black hover:text-icon-linkedin"
          href="https://www.linkedin.com/company/ably-realtime"
        >
          <svg class=" " style="width: 1.5rem; height: 1.5rem">
            <use xlink:href="#sprite-linkedin"></use>
          </svg>
        </a>
        <a
          class="h-24 pr-24 text-cool-black hover:text-icon-github"
          href="https://github.com/ably/"
        >
          <svg class=" " style="width: 1.5rem; height: 1.5rem">
            <use xlink:href="#sprite-github"></use>
          </svg>
        </a>
        <a
          class="h-24 pr-24 text-cool-black hover:text-icon-discord"
          href="https://discord.gg/jwBPhEZ9g5"
        >
          <svg class=" " style="width: 1.5rem; height: 1.5rem">
            <use xlink:href="#sprite-discord"></use>
          </svg>
        </a>
        <div class="border-l border-mid-grey h-40"></div>
        <a
          class="flex flex-row pl-24 text-cool-black hover:text-icon-glassdoor"
          href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
        >
          <svg class=" " style="width: 1.5rem; height: 1.5rem">
            <use xlink:href="#sprite-glassdoor"></use>
          </svg>
        </a>
        <div class="pl-16 text-menu3 font-light">
          <strong class="block font-medium">We're hiring!</strong>
          <a
            href="https://www.glassdoor.co.uk/Overview/Working-at-Ably-EI_IE2184188.11,15.htm"
            class="ui-footer-link"
            >Learn more</a
          >
          at Glassdoor
        </div>
      </div>
    </div>

    <div
      class="md:text-right col-span-full md:col-span-1 ml-8 inline-flex md:ml-auto"
    >
      <img
        alt="Rocket List 2021"
        class="mr-24 w-96 h-96"
        src="/assets/ably_ui/core/images/rocket-list-2021-585749315fb7d34591caa21db10b0a2abc6bb38bbe32f9f350b5ae48a05c26dd.png"
      />
      <img
        alt="Flexible Companies 2021"
        class="w-96 h-96"
        src="/assets/ably_ui/core/images/flexible-companies-dc4c35aaec0e576c23df2d8c684bf64739a0df9ed6410f84ea7ba61245ca4efc.png"
      />
    </div>
  </div>
</footer>
`;

exports[`ControlMobileDropdown > react > renders correctly by default #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="false"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors"
    data-id="meganav-control-mobile-dropdown-menu"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use></svg
  ><svg
    class="text-cool-black transition-colors hidden"
    data-id="meganav-control-mobile-dropdown-close"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > react > renders correctly on click #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="true"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors hidden"
    data-id="meganav-control-mobile-dropdown-menu"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use></svg
  ><svg
    class="text-cool-black transition-colors"
    data-id="meganav-control-mobile-dropdown-close"
    style="width: 1.5rem; height: 1.5rem;"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > vw > renders correctly by default #0`] = `
<button
  name="button"
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="false"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use>
  </svg>
  <svg
    class="text-cool-black transition-colors hidden"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > vw > renders correctly on click #0`] = `
<button
  name="button"
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="true"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="text-cool-black transition-colors hidden"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-icon-gui-burger-menu"></use>
  </svg>
  <svg
    class="text-cool-black transition-colors"
    style="width: 1.5rem; height: 1.5rem"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-icon-gui-close"></use>
  </svg>
</button>
`;

exports[`Notice > react > renders correctly by default #0`] = `
<div
  class="ui-announcement bg-gradient-active-orange text-white"
  data-id="ui-notice"
  style="display: none;"
>
  <div class="ui-grid-px py-16 max-w-screen-xl mx-auto flex items-start">
    <a href="/" class="font-light w-full pr-8 text-p3 self-center"
      ><strong class="font-medium whitespace-nowrap pr-4"
        >Something something</strong
      ><span class="pr-4"
        >Lorem ipsum dolor sit amet, in nonumes delectus nominati eam, novum
        recusabo an mel. Aeque maiorum patrioque te per, congue epicurei
        qualisque at quo. An has quis ludus appellantur. Id vis solum assentior
        theophrastus</span
      ><span class="underline cursor-pointer whitespace-nowrap"
        >CLICK ME</span
      ></a
    ><button
      type="button"
      class="ml-auto h-20 w-20 border-none bg-none self-baseline"
    >
      <svg class="text-white " style="width: 1.25rem; height: 1.25rem;">
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Notice > vw > renders correctly by default #0`] = `
<div
  class="ui-announcement bg-gradient-active-orange text-white"
  data-id="ui-notice"
  style="display: none;"
>
  <div class="ui-grid-px py-16 max-w-screen-xl mx-auto flex items-start">
    <a class="font-light w-full pr-8 text-p3 self-center" href="/">
      <strong class="font-medium whitespace-nowrap pr-4"
        >Something something</strong
      >
      <span class="pr-4"
        >Lorem ipsum dolor sit amet, in nonumes delectus nominati eam, novum
        recusabo an mel. Aeque maiorum patrioque te per, congue epicurei
        qualisque at quo. An has quis ludus appellantur. Id vis solum assentior
        theophrastus</span
      >
      <span class="underline cursor-pointer whitespace-nowrap">CLICK ME</span>
    </a>
    <button
      name="button"
      type="button"
      class="h-20 w-20 mt-4 ml-auto border-none bg-none self-baseline"
    >
      <svg class="text-white " style="width: 1.25rem; height: 1.25rem">
        <use xlink:href="#sprite-icon-gui-close"></use>
      </svg>
    </button>
  </div>
</div>
`;
